Bug 1342442 - Add null-check over gService in nsCacheService. r=michal, a=ritu